--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -9,3 +9,6 @@ img{vertical-align:top;border:none}
 html,body,.el-divider__text{
   background-color: rgba(250,250,250,1) !important;
 }
+html{
+  min-width: 780px;
+}
